...
    <array name="goals">
        <item>Select</item>
        <item>I want to loose weight</item>
        <item>I want to keep weight</item>
        <item>I want to gain weight</item>
    </array>
    <string name="item_required">Required</string>
    <string name="kcal">kcal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="breakfast">Breakfast</string>
    <string name="second_breakfast">II Breakfast</string>
    <string name="lunch">Lunch</string>
...
